# dijetcore

./: .gitmodules  CMakeLists.txt  README.md  TODO.md
dijetcore/: CMakeLists.txt
dijetcore/data/: CMakeLists.txt
dijetcore/data/general/: CMakeLists.txt
dijetcore/data/general/qa/: CMakeLists.txt  basic_embedding_qa.cc  trigger_count.cc
dijetcore/data/run14/: CMakeLists.txt
dijetcore/data/run14/efficiency/: embedding_qa.cc  generate_y14_efficiency.cc
dijetcore/data/run14/qa/: CMakeLists.txt  make_refmult_tree.cc  make_runid_tree.cc  run_qa.cc
dijetcore/data/stpicodst/: CMakeLists.txt
dijetcore/data/stpicodst/qa/: CMakeLists.txt  basic_qa.cc  check_tower_matching.cc  count_dijets.cc  test_new_track_matching.cc  track_extrapolation.cc
dijetcore/dijet_imbalance/: CMakeLists.txt  differential_aj_auau_y14.cc  differential_aj_auau_y7.cc  differential_aj_jewel.cc  differential_aj_pp_y6.cc  differential_aj_pp_y6_y14_embed.cc  differential_aj_pp_y6_y14_embed_pico.cc  differential_aj_pp_y6_y7_embed.cc  differential_aj_pythia.cc  differential_aj_pythia_y7_embed.cc  print_aj_auau_y7.cc  pythia_det_sim_aj.cc  pythia_det_sim_aj_unfold.cc  simple_aj_auau.cc
dijetcore/dijet_imbalance/print/: CMakeLists.txt  print_aj_auau_grid.cc  print_aj_auau_scan.cc  print_aj_auau_scan_paper.cc  print_aj_auau_scan_qa.cc  print_aj_auau_y7.cc  print_aj_auau_y7_y6_radius.cc  print_aj_jewel.cc  print_aj_pythia.cc  print_qa_jewel.cc
dijetcore/dijet_imbalance/qa/: CMakeLists.txt  analysis_note_qa.cc  compare_kolja.cc  compare_kolja_pp.cc  compare_rho_sig_pt_const.cc  diff_kolja_worker.cc  jewel_qa.cc  run_aj_compare_dijetworker.cc  run_aj_compare_kolja.cc  run_dijetworker_compare_kolja.cc
dijetcore/dijet_imbalance/submit_scripts/: pbs_submit_dijet_imbalance_auau_y14.py  pbs_submit_dijet_imbalance_auau_y7.py  pbs_submit_dijet_imbalance_jewel.py  pbs_submit_dijet_imbalance_pp_y6.py  pbs_submit_dijet_imbalance_pp_y6_embed_y14.py  pbs_submit_dijet_imbalance_pp_y6_no_embed.py  pbs_submit_dijet_imbalance_pythia.py
dijetcore/lib/: CMakeLists.txt  assert.cc  assert.h  containers.h  containers_test.cc  filesystem.cc  filesystem.h  filesystem_test.cc  flags.cc  flags.h  json.h  logging.cc  logging.h  map.h  math.h  memory.h  random.cc  random.h  random_benchmark.cc  random_test.cc  types.cc  types.h
dijetcore/lib/json/: CMakeLists.txt
dijetcore/lib/memory/: CMakeLists.txt  make_unique.h
dijetcore/lib/random/: CMakeLists.txt  pt_distribution.h  pt_distribution_test.cc
dijetcore/lib/root_ext/: CMakeLists.txt  TTreeReader.cxx  TTreeReader.h  TTreeReaderArray.cxx  TTreeReaderArray.h  TTreeReaderGenerator.cxx  TTreeReaderUtils.h  TTreeReaderValue.cxx
dijetcore/lib/string/: CMakeLists.txt  path_utils.cc  path_utils.h  path_utils_test.cc  string_cast.h  string_cast_test.cc  string_utils.cc  string_utils.h  string_utils_test.cc
dijetcore/proto/: CMakeLists.txt  dijetcore.proto
dijetcore/resources/: CMakeLists.txt
dijetcore/resources/bad_tower_lists/: y14_y6_bad_tower_p18ih.txt  y7_y6_bad_tower_strict.txt
dijetcore/resources/data_lists/: y14_mb_file_list.txt  y14_new_pico_file_list_gauss.txt  y7_mb_file_list.txt  y7_mb_file_list_rcf.txt
dijetcore/resources/data_lists/p18ih_lists/: y14_high_ht.list  y14_high_ht.txt  y14_high_mb.list  y14_high_mb.txt  y14_low_ht.txt  y14_low_mb.list  y14_low_mb.txt  y14_mid_ht.list  y14_mid_ht.txt  y14_mid_mb.list  y14_mid_mb.txt
dijetcore/resources/data_lists/pp_ht_gauss/: y6_pp_ht_000.list  y6_pp_ht_001.list  y6_pp_ht_002.list  y6_pp_ht_003.list  y6_pp_ht_004.list  y6_pp_ht_005.list  y6_pp_ht_006.list  y6_pp_ht_007.list  y6_pp_ht_008.list  y6_pp_ht_009.list  y6_pp_ht_010.list  y6_pp_ht_011.list  y6_pp_ht_012.list  y6_pp_ht_013.list  y6_pp_ht_014.list  y6_pp_ht_015.list  y6_pp_ht_016.list  y6_pp_ht_017.list  y6_pp_ht_018.list  y6_pp_ht_019.list  y6_pp_ht_020.list  y6_pp_ht_021.list  y6_pp_ht_022.list  y6_pp_ht_023.list  y6_pp_ht_024.list  y6_pp_ht_025.list  y6_pp_ht_026.list  y6_pp_ht_027.list  y6_pp_ht_028.list  y6_pp_ht_029.list  y6_pp_ht_030.list  y6_pp_ht_031.list  y6_pp_ht_032.list  y6_pp_ht_033.list  y6_pp_ht_034.list  y6_pp_ht_035.list  y6_pp_ht_036.list
dijetcore/resources/data_lists/pp_ht_grid/: pp_0.list  pp_1.list  pp_10.list  pp_11.list  pp_12.list  pp_13.list  pp_14.list  pp_15.list  pp_16.list  pp_17.list  pp_18.list  pp_19.list  pp_2.list  pp_20.list  pp_21.list  pp_22.list  pp_23.list  pp_24.list  pp_25.list  pp_26.list  pp_27.list  pp_28.list  pp_29.list  pp_3.list  (+68 more)
dijetcore/resources/efficiencies/: y14_p17id_effic_dca3_nhit20_scaled.root  y14_p18ih_dca3.root
dijetcore/resources/submit/: CMakeLists.txt  batch_local_submit.py  pbs_submit.py  pbs_submit_identical.py
dijetcore/subjet/: CMakeLists.txt
dijetcore/subjet/data/: CMakeLists.txt
dijetcore/subjet/mc/: CMakeLists.txt  detector_smear_subjet.cc
dijetcore/test/: CMakeLists.txt  dijetcore_test_helper.cc  dijetcore_test_helper.h
dijetcore/util/: CMakeLists.txt
dijetcore/util/data/: CMakeLists.txt  reader_util.h  trigger_lookup.h  trigger_lookup_test.cc  vector_conversion.cc  vector_conversion.h  vector_conversion_test.cc
dijetcore/util/dijet_imbalance/: CMakeLists.txt  auau_reader.cc  auau_reader.h  generic_reader.cc  generic_reader.h  pp_reader.cc  pp_reader.h  print_routines.cc  print_routines.h  systematics.h
dijetcore/util/fastjet/: CMakeLists.txt  dijet_key.cc  dijet_key.h  dijet_key_test.cc  selector_compare.cc  selector_compare.h  selector_compare_test.cc
dijetcore/util/mc/: CMakeLists.txt  jewel_reader.cc  jewel_reader.h
dijetcore/util/root/: CMakeLists.txt  compile_vec_tlorentzvector.cc  compile_vec_tlorentzvector.h  grid_print_utils.cc  grid_print_utils.h  histogram_routines.h  histogram_routines.hh  histogram_utils.h  root_print_routines.h  root_print_utils.h
dijetcore/worker/: CMakeLists.txt
dijetcore/worker/data/: CMakeLists.txt
dijetcore/worker/dijet_worker/: CMakeLists.txt  dijet_worker.cc  dijet_worker.h  dijet_worker_test.cc  eta_cone_worker.cc  eta_cone_worker.h  off_axis_worker.cc  off_axis_worker.h
dijetcore/worker/mc/: CMakeLists.txt
(+144 files in other folders)
